k8s/deployments.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: collaboration
spec:
  template:
    metadata:
      labels:
        app: innovationchallenge
        component: collaboration
    spec:
      containers:
      - name: collaboration
        image: gfawcett22/collaboration.api
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /hc
            port: 80
            scheme: HTTP 
          initialDelaySeconds: 5
          periodSeconds: 10 
        livenessProbe:
          httpGet:
            path: /hc
            port: 80
            scheme: HTTP 
          initialDelaySeconds: 60
          periodSeconds: 10
