k8s/collaboration.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: innovation-challenge
    component: collaboration
  name: collaboration
spec:
  ports:
  - port: 80
  selector:
    app: innovation-challenge
    component: collaboration

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: collaboration
spec:
  paused: true
  template:
    metadata:
      labels:
        app: innovation-challenge
        component: collaboration
    spec:
      containers:
      - name: collaboration
        image: innovation-challenge/collaboration.api
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /hc
            port: 80
            scheme: HTTP 
          initialDelaySeconds: 5
          periodSeconds: 10 
        livenessProbe:
          httpGet:
            path: /hc
            port: 80
            scheme: HTTP 
          initialDelaySeconds: 60
          periodSeconds: 10                      
      imagePullSecrets:
      - name: registry-key
