k8s/frontend.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: innovationchallenge
    component: frontend
  name: frontend
spec:
  ports:
  - port: 80
  selector:
    app: innovationchallenge
    component: frontend
  type: LoadBalancer

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    metadata:
      labels:
        app: innovationchallenge
        component: frontend
    spec:
      containers:
      - name: frontend
        image: gfawcett22/rt-collab
        ports:
        - containerPort: 80
