k8s/rabbitmq.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: innovationchallenge
    component: rabbitmq
  name: rabbitmq
spec:
  type: NodePort
  ports:
  - port: 5672
    name: queue-port
  - port: 15672
    name: management-port
  selector:
    app: innovationchallenge
    component: rabbitmq

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  template:
    metadata:
      labels:
        app: innovationchallenge
        component: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
        - containerPort: 15672
