k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: innovationchallenge
    component: collaboration
  name: collaboration
spec:
  ports:
  - port: 80
  selector:
    app: innovationchallenge
    component: collaboration
  sessionAffinity: ClientIP
  type: NodePort
