k8s/sql-data.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: innovation-challenge
    component: sql-data
  name: sql-data
spec:
  ports:
  - port: 1433
  selector:
    app: innovation-challenge
    component: sql-data
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sql-data
spec:
  template:
    metadata:
      labels:
        app: innovation-challenge
        component: sql-data
    spec:
      containers:
      - name: sql-data
        image: microsoft/mssql-server-linux:2017-latest
